--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am a Credit Analyst who was displaced due to a merger and COVID-19.</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>I was born in Wilson, NC but raised in Greensboro NC.</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Currently I enjoy playing with my puppies and social distancing.</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>I would like to work alternating shifts as a beer taster and a mattress tester.</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Greensbor NC</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>Expand employment opportunities and help further my career.</p>
     </section>
 
     <footer id="footer">
